// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #0 [babel-ts] format 1`] = `
"Tuple members must be labeled with a simple identifier. (1:11)
> 1 | type T = [x.y: A];
    |           ^
Cause: Tuple members must be labeled with a simple identifier. (1:10)"
`;

exports[`snippet: #0 [oxc-ts] format 1`] = `
"Expected \`,\` but found \`:\` (1:14)
> 1 | type T = [x.y: A];
    |              ^"
`;

exports[`snippet: #0 [typescript] format 1`] = `
"',' expected. (1:14)
> 1 | type T = [x.y: A];
    |              ^
Cause: ',' expected."
`;

exports[`snippet: #1 [babel-ts] format 1`] = `
"Tuple members must be labeled with a simple identifier. (1:11)
> 1 | type T = [x<y>: A];
    |           ^
Cause: Tuple members must be labeled with a simple identifier. (1:10)"
`;

exports[`snippet: #1 [oxc-ts] format 1`] = `
"Expected \`,\` but found \`:\` (1:15)
> 1 | type T = [x<y>: A];
    |               ^"
`;

exports[`snippet: #1 [typescript] format 1`] = `
"',' expected. (1:15)
> 1 | type T = [x<y>: A];
    |               ^
Cause: ',' expected."
`;
